--- a/css/portfolio-educate.css
+++ b/css/portfolio-educate.css
@@ -1012,7 +1012,15 @@ a:focus, a:hover, a:active {
 
 .float-right, .float-left {
   max-width: 40%;
-  padding: 10px 0 10px 10px;
+  padding: 10px 0 0 10px;
 }
 
+.profile {
+  max-width: 35%;
+  padding: 10px 0 10px 10px;
+  float: right;
+}
 
+.caption {
+  font-size: 14px;
+}
