--- a/css/mirror.css
+++ b/css/mirror.css
@@ -203,8 +203,8 @@ a:focus {
 	text-align: right;
 }
 
-.page_links_top {
-	border-bottom: 2px solid white;
+.page_links_bottom {
+	border-top: 2px solid white;
 }
 
 .slide__subtitle {
@@ -223,7 +223,7 @@ a:focus {
     padding: 0px;
     margin: 5px;
     margin-right: 100px;
-    opacity: 0;
+    opacity: 1;
     -webkit-transition: all 0.35s;
   	-moz-transition: all 0.35s;
   	transition: all 0.35s;
@@ -263,7 +263,7 @@ a:focus {
 }
 
 .page_links_bottom:hover .slide__subtitle {
-	color: #ffc809;
+	/*color: #ffc809;*/
 	-webkit-transition: all 0.35s;
   	-moz-transition: all 0.35s;
   	transition: all 0.35s;
