--- a/css/mirror.css
+++ b/css/mirror.css
@@ -203,9 +203,9 @@ a:focus {
 	text-align: right;
 }
 
-.page_links_bottom {
+/*.page_links_bottom {
 	border-top: 2px solid white;
-}
+}*/
 
 .slide__subtitle {
 	font-size: 50px;
